jobs/OpenCOG_U1404_AtomSpace.log
Started by user [8mha:////4L2jTPWu9zIb56dnp8RqVObesKKV2DVGI0jJXlam1DqAAAAAlx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzWEgZu/dLi1CL9xJTczDwAj6GcLcAAAAA=[0madmin
Building in workspace /var/lib/jenkins/workspace/OpenCOG_U1404_AtomSpace
[OpenCOG_U1404_AtomSpace] $ /bin/sh -xe /tmp/jenkins2809961961682345915.sh
+ COGDIR=../OpenCOG_U1404
+ . ../OpenCOG_U1404/build.docker/docker.env
+ CID=05e9d962e861ac095471a43ecaf0d131259bfe2a3ccb381b061719c9b2c0f252
+ DKRUNROOT=docker exec --user root   05e9d962e861ac095471a43ecaf0d131259bfe2a3ccb381b061719c9b2c0f252
+ DKRUNUSER=docker exec --user jenkins  05e9d962e861ac095471a43ecaf0d131259bfe2a3ccb381b061719c9b2c0f252
+ UID=125
+ GID=132
+ LOGFILE=/var/lib/jenkins/jobs/OpenCOG_U1404_AtomSpace/builds/41/log
+ cat


**********************************************************
**********************************************************
**********************************************************
**********************************************************
*****                                                *****
*****                  Atomspace TEST                *****
*****                                                *****
**********************************************************
**********************************************************
**********************************************************
**********************************************************


+ echo GIT_COMMIT=
GIT_COMMIT=
+ echo GIT_BRANCH=
GIT_BRANCH=
+ echo GIT_URL=
GIT_URL=
+ WDIR=atomspace
+ JOBDIR=../OpenCOG_U1404/dependencies
+ cat
+ chmod +x ../OpenCOG_U1404/dependencies/job1
+ docker exec --user jenkins 05e9d962e861ac095471a43ecaf0d131259bfe2a3ccb381b061719c9b2c0f252 bash dependencies/job1
+ pwd
+ cd atomspace
+ cd build
+ make -j8 test
/home/opencog
[  0%] Built target opencog_atom_types
[  2%] Built target truthvalue
[  4%] Built target atombase
[  8%] [  8%] Built target attentionbank
Built target atomutils
[ 16%] Built target atomcore
[ 17%] [ 20%] Built target clearbox
Built target atomspace
[ 20%] [ 20%] [ 20%] [ 20%] [ 21%] Generating SimpleTruthValueUTest.cpp
Generating TVMergeUTest.cpp
Generating AttentionValueUTest.cpp
Generating EvidenceCountTruthValueUTest.cpp
Generating BetaReduceUTest.cpp
[ 22%] [ 24%] Built target atomspaceutils
[ 24%] Built target type_constructors
Built target lambda
[ 24%] [ 24%] [ 24%] Generating VariablesUTest.cpp
Generating DefineLinkUTest.cpp
Generating ComposeLinkUTest.cpp
Scanning dependencies of target EvidenceCountTruthValueUTest
Scanning dependencies of target SimpleTruthValueUTest
Scanning dependencies of target BetaReduceUTest
Scanning dependencies of target AttentionValueUTest
Scanning dependencies of target TVMergeUTest
[ 24%] [ 24%] [ 24%] [ 24%] [ 24%] Building CXX object tests/truthvalue/CMakeFiles/EvidenceCountTruthValueUTest.dir/EvidenceCountTruthValueUTest.cpp.o
Building CXX object tests/atoms/CMakeFiles/BetaReduceUTest.dir/BetaReduceUTest.cpp.o
Building CXX object tests/truthvalue/CMakeFiles/TVMergeUTest.dir/TVMergeUTest.cpp.o
Building CXX object tests/truthvalue/CMakeFiles/SimpleTruthValueUTest.dir/SimpleTruthValueUTest.cpp.o
Building CXX object tests/truthvalue/CMakeFiles/AttentionValueUTest.dir/AttentionValueUTest.cpp.o
Scanning dependencies of target DefineLinkUTest
Scanning dependencies of target VariablesUTest
[ 24%] [ 25%] Building CXX object tests/atoms/CMakeFiles/DefineLinkUTest.dir/DefineLinkUTest.cpp.o
Scanning dependencies of target ComposeLinkUTest
Building CXX object tests/atoms/CMakeFiles/VariablesUTest.dir/VariablesUTest.cpp.o
[ 25%] Building CXX object tests/atoms/CMakeFiles/ComposeLinkUTest.dir/ComposeLinkUTest.cpp.o
Linking CXX executable SimpleTruthValueUTest
Linking CXX executable EvidenceCountTruthValueUTest
[ 25%] Built target SimpleTruthValueUTest
[ 25%] Built target unify
[ 25%] Generating AtomSpaceUtilsUTest.cpp
[ 25%] Scanning dependencies of target AtomSpaceUtilsUTest
Built target EvidenceCountTruthValueUTest
[ 27%] [ 27%] Building CXX object tests/atomspaceutils/CMakeFiles/AtomSpaceUtilsUTest.dir/AtomSpaceUtilsUTest.cpp.o
Generating AttentionUTest.cpp
Scanning dependencies of target AttentionUTest
[ 28%] Building CXX object tests/attentionbank/CMakeFiles/AttentionUTest.dir/AttentionUTest.cpp.o
Linking CXX executable TVMergeUTest
[ 28%] Built target TVMergeUTest
[ 31%] Built target smob
[ 31%] Built target atomspace_cython
[ 34%] Built target query
[ 34%] Generating AtomTableUTest.cpp
Scanning dependencies of target AtomTableUTest
[ 34%] Building CXX object tests/atomspace/CMakeFiles/AtomTableUTest.dir/AtomTableUTest.cpp.o
Linking CXX executable DefineLinkUTest
[ 34%] Built target DefineLinkUTest
[ 34%] Linking CXX executable ComposeLinkUTest
Generating ClassServerUTest.cpp
Scanning dependencies of target ClassServerUTest
[ 35%] Building CXX object tests/atomspace/CMakeFiles/ClassServerUTest.dir/ClassServerUTest.cpp.o
Linking CXX executable VariablesUTest
[ 35%] Built target ComposeLinkUTest
[ 35%] Generating AtomUTest.cpp
[ 35%] Built target VariablesUTest
Scanning dependencies of target AtomUTest
[ 36%] [ 37%] Linking CXX executable BetaReduceUTest
Building CXX object tests/atomspace/CMakeFiles/AtomUTest.dir/AtomUTest.cpp.o
Generating NodeUTest.cpp
Scanning dependencies of target NodeUTest
[ 37%] Building CXX object tests/atomspace/CMakeFiles/NodeUTest.dir/NodeUTest.cpp.o
[ 37%] Built target BetaReduceUTest
[ 37%] Generating LinkUTest.cpp
Scanning dependencies of target LinkUTest
[ 37%] Building CXX object tests/atomspace/CMakeFiles/LinkUTest.dir/LinkUTest.cpp.o
In file included from /home/opencog/atomspace/build/tests/attentionbank/AttentionUTest.cpp:24:0:
/home/opencog/atomspace/tests/attentionbank/AttentionUTest.cxxtest: In member function 'void AttentionUTest::testGetRandomAtoms()':
/home/opencog/atomspace/tests/attentionbank/AttentionUTest.cxxtest:69:28: error: 'class opencog::AttentionBank' has no member named 'getRandomAtom'
             Handle h = _ab.getRandomAtom();
                            ^
Linking CXX executable AttentionValueUTest
[ 37%] Built target AttentionValueUTest
[ 37%] Generating TLBUTest.cpp
Scanning dependencies of target TLBUTest
[ 38%] Building CXX object tests/atomspace/CMakeFiles/TLBUTest.dir/TLBUTest.cpp.o
make[3]: *** [tests/attentionbank/CMakeFiles/AttentionUTest.dir/AttentionUTest.cpp.o] Error 1
make[2]: *** [tests/attentionbank/CMakeFiles/AttentionUTest.dir/all] Error 2
make[2]: *** Waiting for unfinished jobs....
Linking CXX executable AtomSpaceUtilsUTest
[ 38%] Built target AtomSpaceUtilsUTest
Linking CXX executable NodeUTest
[ 38%] Built target NodeUTest
Linking CXX executable ClassServerUTest
[ 38%] Built target ClassServerUTest
Linking CXX executable LinkUTest
[ 38%] Built target LinkUTest
Linking CXX executable TLBUTest
[ 38%] Built target TLBUTest
Linking CXX executable AtomTableUTest
[ 38%] Built target AtomTableUTest
Linking CXX executable AtomUTest
[ 38%] Built target AtomUTest
make[1]: *** [CMakeFiles/test.dir/rule] Error 2
make: *** [test] Error 2
+ DSTATUS=TESTFAIL
+ /var/lib/jenkins/status/updateStatus TESTFAIL /var/lib/jenkins/jobs/OpenCOG_U1404_AtomSpace/builds/41/log OpenCOG_U1404_AtomSpace
Already up-to-date.
